Added .idea/dictionaries/matan_rak.xml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea/dictionaries/matan_rak.xml
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,macos,linux
